# ghonn_models_pytorch

./: .gitignore  .readthedocs.yaml  1_playground_honu.ipynb  2_playground_honn.ipynb  3_playground_gohnu.ipynb  4_playground_gohnn.ipynb  README.md  playground.ipynb  pyproject.toml  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  insights.rst  install.rst  network_layers.rst  neurons.rst  quickstart.rst
examples/: 01_air_passanger_prediction.ipynb  ghonn_air_passenger_model.pth
ghonn_models_pytorch/: __init__.py  honu.py
ghonn_models_pytorch/core/: __init__.py  banks.py  convghonn.py  ghonn.py  ghonu.py  honn.py  honu.py  revin.py  saghonn.py
ghonn_models_pytorch/datasets/: __init__.py  data_loaders.py  datasets.py
requirements/: docs.txt  required.txt
src/: __init__.py  ghonn.py  ghonu.py  honn.py  honu.py  utils.py
tests/: test_core.py
