[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ghonn_models_pytorch"
version = "0.1.0"
description = " Gated Higher Order Neural Networks models. PyTorch."
authors = [
    { name = "Ondrej Budik", email = "obudik@jcu.cz" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Programming Language :: Python :: Implementation :: PyPy',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.7.0",
    "numpy~=2.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
docs= [
    "sphinx",
]
dev = [
    "ruff>=0.11",
    "mypy",
    "jupyter",
    "setuptools",
    "pylint"
]

[project.urls]
Homepage = "https://github.com/carnosi/ghonn_models_pytorch"
Repository = "https://github.com/carnosi/ghonn_models_pytorch"

[tool.ruff]
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "E402"
    "T201",
]
[tool.ruff.per-file-ignores]
"tests/*" = []

[tool.ruff.pydocstyle]
convention = "google"

[tool.pylint]
max-line-length = 100

[tool.black]
line-length = 100

[tool.setuptools.dynamic]
version = { attr = "ghonn_models_pytorch.__version__" }

tool.setuptools.packages.find:
include = ["ghonn_models_pytorch*"]



