[build-system]
requires = ["setuptools~=83.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghonn_models_pytorch"
description = "Gated Higher Order Neural Networks models. PyTorch."
authors = [
    { name = "Ondrej Budik", email = "obudik@jcu.cz" }
]
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Programming Language :: Python :: Implementation :: PyPy',
    "Operating System :: OS Independent",
]
dependencies = [
    "torch~=2.13",
    "numpy~=2.5",
    "pandas~=3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx~=9.1",
    "autodocsumm~=0.2.15",
    "sphinx-book-theme~=1.2",
]
dev = [
    "ruff~=0.15",
    "mypy~=2.2",
    "setuptools~=83.0",
    "pylint~=4.0",
    "build~=1.5",
]
examples = [
    "matplotlib~=3.11",
    "jupyter~=1.1.1",
    "scikit-learn~=1.9",
    "tqdm~=4.48",
]

[project.urls]
Homepage = "https://gmp.readthedocs.io/en/latest/"
Repository = "https://github.com/carnosi/ghonn_models_pytorch"

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "E402",
    "T201",
]
[tool.ruff.per-file-ignores]
"tests/*" = []

[tool.ruff.pydocstyle]
convention = "google"

[tool.pylint]
max-line-length = 100

[tool.black]
line-length = 100

[tool.setuptools.dynamic]
version = { attr = "ghonn_models_pytorch.__version__" }

[tool.setuptools.packages.find]
include = ["ghonn_models_pytorch*"]



